--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "firebase": "^7.6.1",
     "react": "16.9.0",
+    "react-firestore": "^1.0.1",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.4.0",
