--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-firestore": "^1.0.1",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
     "react-navigation": "^4.0.10",
