--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@react-native-firebase/app": "^6.2.0",
 		"firebase": "^7.6.1",
+		"lodash": "^4.17.15",
 		"react": "16.9.0",
 		"react-firestore": "^1.0.1",
 		"react-native": "0.61.5",
