--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"@react-native-firebase/app": "^6.2.0",
 		"firebase": "^7.6.1",
 		"lodash": "^4.17.15",
-		"react": "16.9.0",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
 		"react-firestore": "^1.0.1",
 		"react-native": "0.61.5",
 		"react-native-gesture-handler": "^1.5.3",
@@ -27,11 +28,14 @@
 		"@babel/core": "^7.6.2",
 		"@babel/runtime": "^7.6.2",
 		"@react-native-community/eslint-config": "^0.0.5",
+		"@types/enzyme-adapter-react-16": "^1.0.5",
 		"@types/jest": "^24.0.25",
 		"@types/react": "^16.9.17",
 		"@types/react-native": "^0.60.27",
 		"@types/react-test-renderer": "^16.9.1",
 		"babel-jest": "^24.9.0",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
 		"eslint": "^6.5.1",
 		"jest": "^24.9.0",
 		"metro-react-native-babel-preset": "^0.56.0",
