--- a/package.json
+++ b/package.json
@@ -1,65 +1,76 @@
 {
-	"name": "app",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"android": "react-native run-android",
-		"ios": "react-native run-ios",
-		"start": "react-native start",
-		"test": "jest",
-		"lint": "eslint ."
-	},
-	"dependencies": {
-		"@react-native-firebase/app": "^6.2.0",
-		"firebase": "^7.6.1",
-		"lodash": "^4.17.15",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"react-firestore": "^1.0.1",
-		"react-native": "0.61.5",
-		"react-native-gesture-handler": "^1.5.3",
-		"react-native-image-picker": "^1.1.0",
-		"react-native-reanimated": "^1.4.0",
-		"react-native-screens": "^2.0.0-alpha.22",
-		"react-navigation": "^4.0.10",
-		"react-navigation-stack": "^1.10.3"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.6.2",
-		"@babel/runtime": "^7.6.2",
-		"@react-native-community/eslint-config": "^0.0.5",
-		"@types/enzyme-adapter-react-16": "^1.0.5",
-		"@types/jest": "^24.0.25",
-		"@types/react": "^16.9.17",
-		"@types/react-native": "^0.60.27",
-		"@types/react-test-renderer": "^16.9.1",
-		"babel-jest": "^24.9.0",
-		"enzyme": "^3.11.0",
-		"enzyme-adapter-react-16": "^1.15.2",
-		"eslint": "^6.5.1",
-		"jest": "^24.9.0",
-		"metro-react-native-babel-preset": "^0.56.0",
-		"react-native-typescript-transformer": "^1.2.13",
-		"react-test-renderer": "16.9.0",
-		"ts-jest": "^24.2.0",
-		"typescript": "^3.7.4"
-	},
-	"jest": {
-		"preset": "react-native",
-		"moduleFileExtensions": [
-			"ts",
-			"tsx",
-			"js"
-		],
-		"transform": {
-			"^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-			"\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-		},
-		"testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-		"testPathIgnorePatterns": [
-			"\\.snap$",
-			"<rootDir>/node_modules/"
-		],
-		"cacheDirectory": ".jest/cache"
-	}
+  "name": "app",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "@react-native-firebase/app": "^6.2.0",
+    "babel": "^6.23.0",
+    "babel-plugin-module-alias": "^1.6.0",
+    "firebase": "^7.6.1",
+    "lodash": "^4.17.15",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-firestore": "^1.0.1",
+    "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.3",
+    "react-native-image-picker": "^1.1.0",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^2.0.0-alpha.22",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.25",
+    "@types/react": "^16.9.17",
+    "@types/react-native": "^0.60.27",
+    "@types/react-test-renderer": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-native": "^3.8.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "16.9.0",
+    "ts-jest": "^24.2.0",
+    "typescript": "^3.7.4"
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ],
+    "cacheDirectory": ".jest/cache"
+  }
 }
