--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,16 +5,11 @@
     "react-native/react-native": true
   },
   "extends": [
-    "plugin:react/recommended",
     "eslint:recommended",
-    "airbnb",
-    "prettier",
-    "plugin:prettier/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
+    "plugin:@typescript-eslint/recommended",
     "plugin:import/typescript",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -28,7 +23,7 @@
     },
     "ecmaVersion": 2018
   },
-  "plugins": ["react", "@typescript-eslint", "react-native", "import"],
+  "plugins": ["react", "prettier", "@typescript-eslint", "react-native", "import"],
   "rules": {
     "import/no-default-export": 2,
     "import/prefer-default-export": 0,
@@ -46,6 +41,8 @@
     "import/first": 2,
     "import/newline-after-import": 2,
     "import/no-duplicates": 2,
-    "@typescript-eslint/interface-name-prefix": ["error", { "prefixWithI": "always" }]
+    "@typescript-eslint/interface-name-prefix": ["error", { "prefixWithI": "always" }],
+    "@typescript-eslint/camelcase": 0,
+    "prettier/prettier": ["error", { "singleQuote": true }]
   }
 }
